--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "example": "examples"
     },
     "scripts": {
-        "start": "nodemon app.js",
+        "start": "node app.js",
         "lint": "eslint src --ext .js"
     },
     "repository": {
